proof-of-concepts/example-app-openlayers-persist-postgis/kubernetes/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dft-street-manager-web-deployment
spec:
  selector:
    matchLabels:
      app: dft-street-manager-web
  replicas: 2
  template:
    metadata:
      labels:
        app: dft-street-manager-web
    spec:
      containers:
      - name: dft-street-manager-web
        image: <DOCKER_REPO_HOSTNAME>/<DOCKER_PROJECT_ID>/<DOCKER_REPO_NAME>:<DOCKER_TAG>
        ports:
          - containerPort: 3000
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
          requests:
            memory: 256Mi
            cpu: 250m
      nodeSelector:
        system: false
