proof-of-concepts/example-app-openlayers-persist-postgis/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: dft-street-manager-web-ingress
spec:
  rules:
    - host: develop.stwrks-dev.net
      http:
        paths:
          - backend:
              serviceName: dft-street-manager-web-service
              servicePort: 80
            path: /
